<resources>
    <string name="app_name">CNC Helper</string>

    <!-- menu -->
    <string name="creator_menu">Create parameters</string>
    <string name="calculator_menu">Parameter calculator</string>
    <string name="g_code_menu">G code base</string>
    <string name="tolerance_menu">Dimensions and tolerance</string>
    <string name="problems_menu">Machining problems</string>

    <string name="g_code_base">G code base</string>
    <string name="dimensions_and_tolerance">Dimensions and tolerance</string>
    <string name="g_code_text">Code</string>
    <string name="g_code_function">Function</string>
    <string name="g_code_parameters">Parameters</string>
    <string name="g_code_similar">Similar</string>
    <string name="hole_diameter">Diameter</string>
    <string name="dimension_text">Dimension (mm)</string>
    <string name="accuracy_grade_text">Accuracy grade</string>
    <string name="chooose_dimension_and_accuracy_text">Choose dimension and accuracy grade</string>
    <string name="chooose_dimension_text">Choose dimension</string>
    <string name="chooose_accuracy_text">Choose accuracy grade</string>
    <string name="threads">Threads</string>
    <string name="metric_threads">Metric threads</string>
    <string name="fine_threads">Fine threads</string>
    <string name="thread_size">Choose thread size</string>
    <string name="holes_for_drill">Otwory pod gwint metryczny</string>
    <string name="micrometer">μm</string>
    <string name="tolerance">Tolerance</string>
    <string name="turning">Turning</string>
    <string name="milling">Milling</string>
    <string name="drilling">Drilling</string>
    <string name="turning_problems">Turning problems</string>
    <string name="milling_problems">Milling problems</string>
    <string name="drilling_problems">Drilling problems</string>
    <string name="turning_problems_solution">Porady toczenie</string>
    <string name="milling_problems_solution">Porady frezowanie</string>
    <string name="drilling_problems_solution">Porady wiercenie</string>
    <string name="turning_parameters">Turning advices</string>
    <string name="milling_parameters">Milling advices</string>
    <string name="drilling_parameters">Drilling advices</string>
    <string name="machning_problems_solution">Problem solution</string>
    <string name="clear_values">Clear values</string>
    <string name="change_thread_type">Change type</string>
    <string name="choose_material">Choose Material</string>
    <string name="recommended_values">recommended values</string>
    <string name="choose_tool_type">Choose tool type</string>
    <string name="recommended_value_exceeded">Recommended value has been exceeded</string>

    <!-- units -->
    <string name="mm">mm</string>
    <string name="rpm">rpm</string>
    <string name="m_min">m/min</string>
    <string name="mm_r">mm/r</string>
    <string name="N_mm2">N/mm2</string>
    <string name="mm_min">mm/min</string>
    <string name="pcs">pcs</string>
    <string name="kW">kW</string>
    <string name="cm3_min">cm3/min</string>
    <string name="min">min</string>
    <string name="Nm">Nm</string>

    <array name="turning_problems_name">
        <item>Duże zużycie na powierzchni natarcia i przyłożenia</item>
        <item>Deformacja krawędzi skrawającej</item>
        <item>Tworzenie się narostu</item>
        <item>Rysy prostopadłe do krawędzi skrawającej</item>
        <item>Wykruszenia na krawędzi skrawającej</item>
        <item>Złamanie płytki skrawającej</item>
        <item>Długie wióry spiralne</item>
        <item>Drgania</item>
    </array>

    <array name="milling_problems_name">
        <item>Duże zużycie na powierzchni natarcia i przyłożenia</item>
        <item>Deformacja krawędzi skrawającej</item>
        <item>Tworzenie się narostu</item>
        <item>Rysy prostopadłe do krawędzi skrawającej</item>
        <item>Wykruszenia na krawędzi skrawającej</item>
        <item>Złamanie płytki skrawającej</item>
        <item>Zła jakość powierzchni</item>
        <item>Drgania</item>
    </array>

    <array name="drilling_problems_name">
        <item>Zniszczony wierzchołek wiertła</item>
        <item>Zużycie na zewn. średnicy wiertła</item>
        <item>Rozbicie otworu</item>
        <item>Zaklinowywanie się wiórów</item>
        <item>Wykruszenia na krawędziach skrawających</item>
        <item>Nieokrągły otwór</item>
        <item>Mała trwałość</item>
        <item>Drgania</item>
    </array>

    <array name="turning_solution">
        <item>- zmniejszyć prędkość skrawania Vc</item>
        <item>- zwiększyć prędkość skrawania Vc</item>
        <item>- dobrać bardziej odporny na ścieranie gat. węglika spiekanego</item>
        <item>- stosować dodatnią geometrię ostrza</item>
        <item>- dobrać bardziej odporny na obciążenia dynamiczne gat. płytki</item>
        <item>- zmniejszyć posuw fz</item>
        <item>- zwiększyć posuw fz</item>
        <item>- zmniejszyć głębokość skrawania</item>
    </array>

    <array name="milling_solution">
        <item>- zmniejszyć prędkość skrawania Vc</item>
        <item>- zwiększyć prędkość skrawania Vc</item>
        <item>- dobrać bardziej odporny na ścieranie gat. węglika spiekanego</item>
        <item>- zmienić zamocowanie freza</item>
        <item>- dobrać bardziej odporny na obciążenia dynamiczne gat. płytki</item>
        <item>- zmniejszyć posuw fz</item>
        <item>- zwiększyć posuw fz</item>
        <item>- frezować na sucho</item>
        <item>- zastosować frez z większą podziałką</item>
    </array>

    <array name="drilling_solution">
        <item>- sprawdzić geometrię części skrawającej</item>
        <item>- skrócić zamocowanie</item>
        <item>- sprawdzić warunki skrawania</item>
        <item>- sprawdzić dobór węglika spiekanego</item>
        <item>- zmniejszyć posuw</item>
        <item>- zwiększyć intensywność doprowadzania chłodziwa</item>
        <item>- zwiększyć prędkość skrawania</item>
    </array>

    <array name="turning_calculator_parameters">
        <item>Cutting speed Vc</item>
        <item>Spindle speed n</item>
        <item>Metal removal rate Q</item>
        <item>Net power Pc</item>
        <item>Machining time Tc</item>
    </array>

    <array name="milling_calculator_parameters">
        <item>Cutting speed Vc</item>
        <item>Spindle speed n</item>
        <item>Feed per tooth fz</item>
        <item>Table feed vf</item>
        <item>Metal removal rate Q</item>
        <item>Net power requirement Pc</item>
        <item>Torque Mc</item>
    </array>

    <array name="drilling_calculator_parameters">
        <item>Cutting speed Vc</item>
        <item>Spindle speed n</item>
        <item>Feed per revolution fn</item>
        <item>Penetration rate vf</item>
        <item>Metal removal rate Q</item>
        <item>Machining time Tc</item>
        <item>Net power requirement Pc</item>
        <item>Torque Mc</item>
    </array>

    <array name="machining_formulas">
        <item>Machined diameter (mm)</item>
        <item>Spindle speed (rpm)</item>
        <item>Cutting speed (m/min)</item>
        <item>Cutting depth (mm)</item>
        <item>Feed per revolution (mm/r)</item>
        <item>Specific cutting force (N/mm2)</item>
        <item>Machined length (mm)</item>
        <item>Cutting diameter at actual depth of cut (mm)</item>
        <item>Table feed (mm/min)</item>
        <item>Number of effective teeth (pcs)</item>
        <item>Feed/tooth (mm)</item>
        <item>Depth of cut (D.O.C.) (mm)</item>
        <item>Working engagement (mm)</item>
        <item>Net power requirement (kW)</item>
        <item>Drill diameter (mm)</item>
        <item>Machining drilling length (mm)</item>
        <item>Metal removal rate Q</item>
        <item>Penetration rate (mm/min)</item>
        <item>Machining time (min)</item>
        <item>Machining time (min)</item>
    </array>

    <array name="g_codes">
        <item>ruch szybki(ustawczy)</item>
        <item>ruch roboczy(liniowy)</item>
        <item>ruch kołowy (CW)</item>
        <item>ruch kołowy (CCW)</item>
        <item>koliste frezowanie gniazda (CW)</item>
        <item>koliste frezowanie gniazda (CCW)</item>
        <item>wybor płaszczyzny</item>
        <item>system calowy</item>
        <item>system mm</item>
        <item>wyłączenie korekcji narzędzia</item>
        <item>korekcja freza na lewo od konturu</item>
        <item>korekcja freza na prawo od konturu</item>
        <item>korekcja długości narzędzia</item>
        <item>baza przedmiotowa</item>
        <item>rozmieszczenie otworów po okręgu</item>
        <item>rozmieszczenie otworów po łuku</item>
        <item>rozmieszczenie otworów po linii</item>
        <item>standardowe wiercenie</item>
        <item>standardowe nakiełkowanie</item>
        <item>standardowe wiercenie precyzyjne</item>
        <item>standardowe gwintowanie</item>
        <item>programowanie absolutne</item>
        <item>programowanie przyrostowe</item>
        <item>powrót do poł. początkowego</item>
        <item>powrót do płaszczyzny R</item>
        <item>frezowanie gniazda</item>
        <item>stop programu</item>
        <item>obroty wrzeciona CW</item>
        <item>obroty wrzeciona CCW</item>
        <item>zatrzymanie wrzeciona</item>
        <item>zmiana narzędzia</item>
        <item>włączenie chłodziwa</item>
        <item>wyłączenie chłodziwa</item>
        <item>włączenie chłodzenia wewn.</item>
        <item>wyłączenie chłodzenia wewn.</item>
        <item>koniec programu</item>
        <item>włącznie podajnika wiórów</item>
        <item>wyłącznie podajnika wiórów</item>
        <item>lokalny podprogram</item>
        <item>wywołanie podprogramu</item>
        <item>koniec podprogramu</item>
    </array>
</resources>
