<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/button_space">

    <TextView
        android:id="@+id/tolerance_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/button_space"
        android:textSize="20sp"
        android:text="@string/chooose_dimension_and_accuracy_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dimension_text"
            style="?android:listSeparatorTextViewStyle"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dimension_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accuracy_grade_text"
            style="?android:listSeparatorTextViewStyle"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/accuracy_grade_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>