<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp"
    android:background="@drawable/menu_bg">

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/g_code_circle">

        <TextView
            android:id="@+id/g_code_detail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/light_gray"
            android:textSize="20sp"
            tools:text="G0"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/g_code_function"
        android:textColor="@color/light_gray"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/light_gray"/>

    <TextView
        android:id="@+id/g_code_detail_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        style="@style/GCodeDetailStyle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/g_code_parameters"
        android:textColor="@color/light_gray"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/light_gray"/>

    <TextView
        android:id="@+id/g_code_detail_parameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        style="@style/GCodeDetailStyle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/g_code_similar"
        android:textColor="@color/light_gray"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/light_gray"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/g_code_detail_similar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/g_code_detail_no_similar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        style="@style/GCodeDetailStyle"/>

</LinearLayout>