<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/menu_bg"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/parameters_creator_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/spanner_ic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/spanner_ic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spanner_ic"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/button_space"
                    android:gravity="center_horizontal"
                    android:text="@string/creator_menu"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/calculator_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/calculator_ic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/calculator_ic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/calculator_ic"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/button_space"
                    android:gravity="center_horizontal"
                    android:text="@string/calculator_menu"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/g_code_base_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/g_code_ic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/g_code"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/g_code_ic"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/button_space"
                    android:gravity="center_horizontal"
                    android:text="@string/g_code_menu"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/dimensions_and_tolerance_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/caliper_ic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/caliper_ic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/caliper_ic"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/button_space"
                    android:gravity="center_horizontal"
                    android:text="@string/tolerance_menu"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>
    </LinearLayout>
</RelativeLayout>